Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.4, 11.8
-
None
-
Unexpected results
-
SELECT using ror_merged (multi-index) scan could fail with s3 tables with error "Out of memory".
Description
Run with S3 options.
DROP TABLE IF EXISTS t; |
CREATE TABLE t (a INT, b INT, KEY(a), KEY(b)) ENGINE=Aria; |
INSERT INTO t VALUES (0,0),(0,10),(3,10); |
ALTER TABLE t ENGINE=S3; |
SELECT * FROM t WHERE a = 99 OR b = 2; |
DROP TABLE t; |
|
10.5 8494758e |
mysqltest: At line 5: query 'SELECT * FROM t WHERE a = 99 OR b = 2' failed: 1041: Out of memory. |
|
error log |
2022-07-23 1:11:09 4 [ERROR] Got error 128 when reading table './test/t'
|
Reproducible on 10.5+, with MinIO and AWS alike.